--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.2.1",
+    "react-native-webview": "11.0.0",
     "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^4.0.0",
     "@react-native-community/async-storage": "^1.12.0",
@@ -34,15 +34,15 @@
     "react-native-date-picker": "^3.1.0",
     "react-native-daum-postcode": "^1.0.9",
     "react-native-easy-dnd": "^1.0.2",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modalbox": "^2.0.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.15.2",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-super-grid": "^4.0.3",
